added index file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<style>
-body {background-color: #ffcccc;}
-h1   {color: #ff6600;}
-p    {color: #123456;}
-</style>
+<head> <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
 
